fixed nav being too large

--- a/Blocks/src/Navigation/style.scss
+++ b/Blocks/src/Navigation/style.scss
@@ -58,6 +58,7 @@
 	display: flex;
 	align-items: center;
 	list-style: none;
+	margin: 0;
 	padding-inline-start: 0 !important;
 	// Top level links border separation
 	> .wp-block-navigation-item {
